# webwork-mcp

./: .dockerignore  .env.example  Dockerfile  Dockerfile.cloudflared  Dockerfile.poke  README.md  docker-compose.yml  main.py  pyproject.toml  server.py  webwork.py
