[project]
name = "webwork-mcp"
version = "0.1.0"
description = "An MCP server that connects LLMs to WeBWorK online homework systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastmcp>=3.0.2",
    "lxml>=6.0.2",
    "requests>=2.32.5",
]
